<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.SignUpActivity">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/signupProfile"
            android:contentDescription="@string/Profile_picture"
            android:foreground="@drawable/profile_pic_back"
            android:scaleType="centerCrop"
            android:src="@drawable/orphan" />
        <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:autofillHints="@string/autoFillEmail"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/emailO"
            android:inputType="textEmailAddress"
            android:padding="@dimen/editTextPadding"
            tools:targetApi="o" />


        <EditText
            android:id="@+id/signUpPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:autofillHints="@string/autofillPasword"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/passwordO"
            android:inputType="textPassword"
            android:padding="@dimen/editTextPadding"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/signUpConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:autofillHints="@string/autofillPasword"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/confirm_passwordO"
            android:inputType="textPassword"
            android:padding="@dimen/editTextPadding"
            tools:targetApi="o" />
        <EditText
            android:id="@+id/signUpUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:autofillHints="@string/auto_fill_username"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="@dimen/editTextPadding"
            tools:targetApi="o" />
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_margin="@dimen/EditTextMargin"
            android:fillViewport="true"
            android:layout_height="100dp">

            <EditText
                android:id="@+id/signUpDescrpition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/descriptionO"
                android:inputType="textMultiLine"
                android:padding="@dimen/editTextPadding"
                android:gravity="top|left"
                tools:targetApi="o" />
        </androidx.core.widget.NestedScrollView>


        <EditText
            android:id="@+id/signUpContactInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/contact_numberO"
            android:inputType="numberDecimal"
            android:padding="@dimen/editTextPadding"
            tools:targetApi="o" />
        <Button
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:text="@string/registerO"
            android:textSize="@dimen/btnTextSize"
            android:textColor="@color/colorText"
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_button"
            android:padding="@dimen/editTextPadding"
            />
    </LinearLayout>
</ScrollView>