<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/activityPadding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">
    <EditText
        android:autofillHints="@string/autoFillEmail"
        android:inputType="textEmailAddress"
        android:layout_margin="@dimen/EditTextMargin"
        android:padding="@dimen/editTextPadding"
        android:hint="@string/emailO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"
        android:id="@+id/signInEmail"
        tools:targetApi="o" />
    <EditText
        android:autofillHints="@string/autofillPasword"
        android:inputType="textPassword"
        android:layout_margin="@dimen/EditTextMargin"
        android:padding="@dimen/editTextPadding"
        android:hint="@string/passwordO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"
        android:id="@+id/signInPass"
        tools:targetApi="o" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <Button
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:text="@string/sign_inO"
            android:textSize="@dimen/btnTextSize"
            android:textColor="@color/colorText"
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_button"
            android:padding="@dimen/editTextPadding"
            android:layout_weight="1"
            />
        <Button
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:text="@string/sign_upO"
            android:textSize="@dimen/btnTextSize"
            android:id="@+id/signUpBtn"
            android:textColor="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_button"
            android:padding="@dimen/editTextPadding"
            android:layout_weight="1"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_passwordO"
        android:textSize="@dimen/btnTextSize"
        android:id="@+id/forgotPassword"
        android:textColor="@color/colorText"
        android:layout_margin="@dimen/EditTextMargin"
        android:background="@drawable/rounded_button"
        android:padding="@dimen/editTextPadding"
        />

</LinearLayout>