<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddChildActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/colorSecondary"
            android:id="@+id/addChildPic"
            android:contentDescription="@string/Profile_picture"
            android:foreground="@drawable/profile_pic_back"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person_add_24dp" />

        <EditText
            android:id="@+id/addChildName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_edit_text"
            android:inputType="textPersonName"
            android:hint="@string/child_name"
            android:padding="@dimen/editTextPadding"
            tools:targetApi="o" />

        <Spinner
            android:id="@+id/add_child_orphanAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/orphanage_name"
            android:padding="@dimen/editTextPadding"
            android:visibility="gone"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/addChildContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/contact_number"
            android:inputType="numberDecimal"
            android:padding="@dimen/editTextPadding"
            tools:targetApi="o" />
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_margin="@dimen/EditTextMargin"
            android:fillViewport="true"
            android:layout_height="100dp">

            <EditText
                android:id="@+id/addChildDescrpition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/descriptionO"
                android:inputType="textMultiLine"
                android:padding="@dimen/editTextPadding"
                android:gravity="top|left"
                tools:targetApi="o" />
        </androidx.core.widget.NestedScrollView>
        <EditText
            android:inputType="date"
            android:background="@drawable/rounded_edit_text"
            android:id="@+id/addChildBirthdate"
            android:layout_width="match_parent"
            android:hint="@string/enter_birthday_date"
            android:focusable="false"
            android:layout_margin="@dimen/EditTextMargin"
            android:padding="@dimen/editTextPadding"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <Spinner
            android:id="@+id/add_child_ethnicity_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/child_ethnicity"
            android:padding="@dimen/editTextPadding"
            tools:targetApi="o" />
        <Button
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:text="@string/send_for_approval"
            android:textSize="@dimen/btnTextSize"
            android:textColor="@color/colorText"
            android:id="@+id/approveChildBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_button"
            android:padding="@dimen/editTextPadding"
            />
    </LinearLayout>


</ScrollView>