<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddWishActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/addWishPic"
            android:contentDescription="@string/Profile_picture"
            android:foreground="@drawable/profile_pic_back"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_add_item" />

        <EditText
            android:id="@+id/addWishName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_edit_text"
            android:inputType="textPersonName"
            android:hint="Wish name"
            android:padding="@dimen/editTextPadding"
            tools:targetApi="o" />

        <Spinner
            android:id="@+id/add_orphanage_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_edit_text"
            android:visibility="gone"
            android:hint="@string/orphanage_name"
            android:padding="@dimen/editTextPadding"
            tools:targetApi="o" />


        <Spinner
            android:id="@+id/add_wisher_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/wisher_name"
            android:padding="@dimen/editTextPadding"
            tools:targetApi="o" />
        <EditText
            android:id="@+id/addWishPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:padding="@dimen/editTextPadding"
            tools:targetApi="o" />
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_margin="@dimen/EditTextMargin"
            android:fillViewport="true"
            android:layout_height="100dp">

            <EditText
                android:id="@+id/addWishDescrpition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/descriptionO"
                android:inputType="textMultiLine"
                android:padding="@dimen/editTextPadding"
                android:gravity="top|left"
                tools:targetApi="o" />
        </androidx.core.widget.NestedScrollView>

        <Button
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:text="@string/send_for_approval"
            android:textSize="@dimen/btnTextSize"
            android:textColor="@color/colorText"
            android:id="@+id/approveWishbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/rounded_button"
            android:padding="@dimen/editTextPadding"
            />
    </LinearLayout>





</ScrollView>